# mfem-apps

./: .gitignore  CMakeLists.txt  LinearElastic.cpp  LinearElasticConfig.json  README.md  configureMfem.sh  ex2.cpp  mfem-apps.hpp
Node_js/: app.js  package-lock.json  package.json
Node_js/create_Array/: create_Array.js  package.json
Node_js/problemConfig/: problemConfig.JSON
Node_js/public/: index.html
Node_js/public/SolidMechanics/: LinearElasticity.html  LinearElasticityProblemDef.ejs  LinearElasticityProblemDef.html
Node_js/public/SolidMechanics/own_js/: code.js
Node_js/public/css/: master.css
SampleGmsh/: Bar.msh  Bar2.geo
SolidMechanics/: CMakeLists.txt  CalcStressSolids.cpp  CalcStressSolids.hpp  GetElasticityTensor.cpp  GetElasticityTensor.hpp  LinearElasticIntegrator.cpp  LinearElasticIntegrator.hpp  SolidMechanics.hpp  Tensor2Voigt.cpp  Tensor2Voigt.hpp
config/: defaults.cmake  user.cmake
config/cmake/modules/: FindPETSc.cmake
general/: CMakeLists.txt  general.hpp  jsonRootParser.hpp
mfemAddOn/: CMakeLists.txt  coefficientaddon.cpp  coefficientaddon.hpp  mfemAddOn.hpp
